# Menu-Backend

./: .env.example  .gitignore  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml
coffeeshop/api/: apps.py  exception_handlers.py  render.py  urls.py
coffeeshop/authentication/: apps.py
coffeeshop/common/: apps.py  services.py
coffeeshop/menu/: apis.py  apps.py  models.py  selectors.py  urls.py
coffeeshop/menu/migrations/: 0001_initial.py
coffeeshop/order/: admin.py  apis.py  apps.py  models.py  selectors.py  services.py  urls.py
coffeeshop/order/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_status.py
coffeeshop/product/: admin.py  apis.py  apps.py  models.py  selectors.py  serializers.py  urls.py
coffeeshop/product/migrations/: 0001_initial.py  0002_alter_image_image.py  0003_recepie.py  0004_alter_recepie_img_alter_recepie_ingredients_and_more.py  0005_alter_product_images.py
coffeeshop/users/: admin.py  apis.py  apps.py  models.py  serializers.py
coffeeshop/users/migrations/: 0003_baseuser_full_name.py
config/: asgi.py  urls.py  wsgi.py
config/django/: base.py
config/settings/: email_sending.py  jwt.py  swagger.py
docker/: beats_entrypoint.sh  celery_entrypoint.sh
