[tool.poetry]
name = "coffeeshop"
version = "0.1.0"
description = ""
authors = ["Ehsan Norouzi <ehsannorouzi@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
django = "^5.0.4"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
celery = "^5.3.6"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
whitenoise = "^6.6.0"
django-filter = "^24.2"
django-extensions = "^3.2.3"
django-cors-headers = "^4.3.1"
django-storages = "^1.14.2"
drf-jwt = "^1.19.2"
boto3 = "^1.34.84"
attrs = "^23.2.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
django-redis = "^5.4.0"
faker = "^24.9.0"
factory-boy = "^3.3.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
ipython = "^8.23.0"
mypy = "^1.9.0"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
boto3-stubs = "^1.34.83"
gunicorn = "^21.2.0"
sentry-sdk = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
